--- a/src/com/raven/form/Form_SP.form
+++ b/src/com/raven/form/Form_SP.form
@@ -874,8 +874,8 @@
                                 <Column editable="true" title="Mau sac" type="java.lang.Object"/>
                                 <Column editable="true" title="Kich thuoc" type="java.lang.Object"/>
                                 <Column editable="true" title="Loai san pham" type="java.lang.Object"/>
-                                <Column editable="true" title="Gia ban" type="java.lang.Object"/>
-                                <Column editable="true" title="So luong ton" type="java.lang.Object"/>
+                                <Column editable="true" title="Gi&#xe1;" type="java.lang.Object"/>
+                                <Column editable="true" title="S&#x1ed1; l&#x1b0;&#x1ee3;ng t&#x1ed3;n" type="java.lang.Object"/>
                                 <Column editable="true" title="Trang thai" type="java.lang.Object"/>
                               </Table>
                             </Property>
